# components/dms2223backend/dms2223backend/openapi/spec.yml
@@ -136,7 +136,6 @@ paths:
       security:
         - user_token: []
           api_key: []
-
   
   /discussions/{id}/answers:
     get:
@@ -350,7 +349,7 @@ paths:
       security:
         - user_token: []
           api_key: []
-          
+
   /discussions/{qid}/reports:
     post:
       summary: Reports a question
@@ -399,7 +398,7 @@ paths:
       security:
         - user_token: []
           api_key: []
-          
+
   # /discussions/reports:
   #   get:
   #     summary: Get a list of question reports.
@@ -535,7 +534,99 @@ paths:
   #     security:
   #       - user_token: []
   #         api_key: []
-  /answers/{aid}/comments:
+  /answers/{id}/comments:
+    get:
+      summary: Gets the comments for an answer
+      description: |
+        Fetches the full answers for a given question.
+      operationId: dms2223backend.presentation.rest.comment.list_all_for_answer
+      parameters:
+        - $ref: '#/components/parameters/AnswerIdPathParam'
+      responses:
+        '200':
+          description: The answers for a question.
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/CommentsListModel'
+              example:
+                - id: 1
+                  qid: 1
+                  timestamp: 1665575089
+                  body: I would suggest four members.
+                  owner:
+                    username: user3
+                  votes: 4
+                  user_votes:
+                    user3: true
+                    user4: true
+                    user5: true
+                    user6: true
+                  comments:
+                    - id: 2
+                      aid: 1
+                      timestamp: 1665575389
+                      body: Evaluation criteria may be relaxed due to the tight number of members
+                      sentiment: POSITIVE
+                      owner:
+                        username: user4
+                      votes: 2
+                      user_votes:
+                        user6: true
+                        user5: true
+                    - id: 1
+                      aid: 1
+                      timestamp: 1665575289
+                      body: Enough to distribute the workload equitatively
+                      sentiment: POSITIVE
+                      owner:
+                        username: user4
+                      votes: 1
+                      user_votes:
+                        user6: true
+                    - id: 3
+                      aid: 1
+                      timestamp: 1665577389
+                      body: The deadline may be too close for the workload and a group this "small"
+                      sentiment: NEGATIVE
+                      owner:
+                        username: user4
+                      votes: 0
+                      user_votes: []
+                - id: 2
+                  qid: 1
+                  timestamp: 1665675089
+                  body: Five members.
+                  owner:
+                    username: user2
+                  votes: 2
+                  user_votes:
+                    user1: true
+                    user2: true
+                  comments:
+                    - id: 4
+                      aid: 2
+                      timestamp: 1665777389
+                      body: The teacher may be stricter if groups are too large
+                      sentiment: NEGATIVE
+                      owner:
+                        username: user4
+                      votes: 0
+                      user_votes: []
+        '404':
+          description: The question does not exist.
+          content:
+            'text/plain':
+              schema:
+                type: string
+              example: 'The question with qid 5 does not exist.'
+      tags:
+        - answer
+        - comments
+      security:
+        - user_token: []
+          api_key: []
+
     post:
       summary: Comments an answer
       description: |
@@ -937,7 +1028,7 @@ components:
           type: string
           
       required:
-        #- title SIFALLACAMBIAR ARTURO
+        - title
         - content
     QuestionsListModel:
       type: array
@@ -1230,6 +1321,7 @@ components:
     EmptyContentModel:
       type: string
       nullable: true
+  
   parameters:
     QuestionIdPathParam:
       name: id
@@ -1239,7 +1331,7 @@ components:
         type: integer
       required: true
     AnswerIdPathParam:
-      name: aid
+      name: id
       description: Answer identifier.
       in: path
       schema:
@@ -1324,5 +1416,4 @@ components:
       name: X-ApiKey-Backend
       in: header
       x-apikeyInfoFunc: dms2223backend.presentation.rest.security.verify_api_key
-
 
